--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-# emiejoe.github.io
+WELCOME!
 Hi my name is Emily Smith! 
+This is my website!https://scontent.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11693889_1468900066765664_7870277114924043700_n.jpg?oh=d64b0888bfe4a53ef65581cf8e5c239c&oe=5688B882
