--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1 style="text-align:center">Emily's Website!</h1>
 h1   {color:magenta}
 <body style="background-color:violet">
-<img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11693889_1468900066765664_7870277114924043700_n.jpg?oh=d64b0888bfe4a53ef65581cf8e5c239c&oe=5688B882" alt="https://www.facebook.com/photo.php?fbid=1468900066765664&set=t.100003217705943&type=3&theater" width="384" style="text-align:center" height="442">
-<script type="text/javascript" class="phhhoto-embed" data-phhhoto="TyrJSwwhqry" src="//embed.phhhoto.com/embed.js"></script>
+<img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11693889_1468900066765664_7870277114924043700_n.jpg?oh=d64b0888bfe4a53ef65581cf8e5c239c&oe=5688B882" alt="https://www.facebook.com/photo.php?fbid=1468900066765664&set=t.100003217705943&type=3&theater" width="384" height="442">
+<script type="text/javascript" class="phhhoto-embed" data-phhhoto="TyrJSwwhqry" src="//embed.phhhoto.com/embed.js"width="384" height="442"></script>
 Hi my name is Emily Smith! 
 This is my website!
