--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
-<h1>Emily's Website!</h1> 
-h1   {color:violet}
-<body style="background-color:lightpink">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+#header {
+    background-color:pink;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:60px;
+    background-color:lightblue;
+    height:1900px;
+    width:100px;
+    float:left;
+    padding:5px;	      
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;	 	 
+}
+#footer {
+    background-color:pink;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px;	 	 
+}
+</style>
+</head>
+<body>
+
+<div id="header">
+<h1>Emily Smith!</h1>
+</div>
+
+<div id="nav">
+This<br>
+is<br>
+my<br>
+website!<br>
+</div>
+
+<div id="section">
+<h2>Welcome!</h2>
 <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11693889_1468900066765664_7870277114924043700_n.jpg?oh=d64b0888bfe4a53ef65581cf8e5c239c&oe=5688B882" alt="https://www.facebook.com/photo.php?fbid=1468900066765664&set=t.100003217705943&type=3&theater" width="394" height="442">
 <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xla1/v/t1.0-9/11986512_823105741141655_3252824191906028276_n.jpg?oh=985f2a6106b4ce9a7e844c77db3d4ee7&oe=5694E028" alt="https://www.facebook.com/photo.php?fbid=823105741141655&set=t.100003217705943&type=3&theater" width="394" height="442">
 <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11218460_467565153451251_1830104291450174517_n.jpg?oh=e01dac7697cf7b0f2214d236ce568b7b&oe=569E1FAF" alt="https://www.facebook.com/photo.php?fbid=467565153451251&set=a.467565043451262.1073741832.100005933108215&type=3&theater" width="394" height="442">
+<img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/11201895_774898325962397_7046819288514680268_n.jpg?oh=2955207ff92e177a7b1cce30a714776d&oe=56998C7E" alt="https://www.facebook.com/photo.php?fbid=774898325962397&set=t.100003217705943&type=3&theater" width="394" height="442">
 
-Hi my name is Emily Smith! 
-This is my website!
+</div>
+
+<div id="footer">
+Goodbye!
+</div>
+
+</body>
+</html>
+
